--- a/glade/dialogs/preferences.glade
+++ b/glade/dialogs/preferences.glade
@@ -13,6 +13,7 @@
     <child internal-child="vbox">
       <widget class="GtkVBox" id="dialog-vbox9">
         <property name="visible">True</property>
+        <property name="orientation">vertical</property>
         <property name="spacing">4</property>
         <child>
           <widget class="GtkNotebook" id="notebook">
@@ -672,24 +673,10 @@ For some options it is neccessary to restart tekka for the changes to take effec
               </packing>
             </child>
             <child>
-              <widget class="GtkLabel" id="label13">
-                <property name="visible">True</property>
-                <property name="label" translatable="yes">_Advanced</property>
-                <property name="use_underline">True</property>
-              </widget>
-              <packing>
-                <property name="position">5</property>
-                <property name="tab_fill">False</property>
-                <property name="type">tab</property>
-              </packing>
-            </child>
-            <child>
-              <placeholder/>
-            </child>
-            <child>
               <widget class="GtkLabel" id="label14">
                 <property name="visible">True</property>
-                <property name="label" translatable="yes">page 7</property>
+                <property name="label" translatable="yes">Ad_vanced Settings</property>
+                <property name="use_underline">True</property>
               </widget>
               <packing>
                 <property name="position">5</property>
@@ -708,7 +695,7 @@ For some options it is neccessary to restart tekka for the changes to take effec
             <property name="layout_style">end</property>
             <child>
               <widget class="GtkButton" id="button2">
-                <property name="label" translatable="yes">gtk-close</property>
+                <property name="label">gtk-close</property>
                 <property name="response_id">-6</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
