--- a/glade/mainwindow.glade
+++ b/glade/mainwindow.glade
@@ -623,6 +623,38 @@
       </widget>
     </child>
     <child>
+      <widget class="GtkImageMenuItem" id="connectItem">
+        <property name="label" translatable="yes">_Connect</property>
+        <property name="visible">True</property>
+        <property name="tooltip" translatable="yes">Connect to the pointed server.</property>
+        <property name="use_underline">True</property>
+        <property name="use_stock">False</property>
+        <signal name="activate" handler="connectItem_activate_cb"/>
+        <child internal-child="image">
+          <widget class="GtkImage" id="image3">
+            <property name="visible">True</property>
+            <property name="stock">gtk-connect</property>
+          </widget>
+        </child>
+      </widget>
+    </child>
+    <child>
+      <widget class="GtkImageMenuItem" id="disconnectItem">
+        <property name="label" translatable="yes">_Disconnect</property>
+        <property name="visible">True</property>
+        <property name="tooltip" translatable="yes">Disconnect the pointed server.</property>
+        <property name="use_underline">True</property>
+        <property name="use_stock">False</property>
+        <signal name="activate" handler="disconnectItem_activate_cb"/>
+        <child internal-child="image">
+          <widget class="GtkImage" id="image4">
+            <property name="visible">True</property>
+            <property name="stock">gtk-disconnect</property>
+          </widget>
+        </child>
+      </widget>
+    </child>
+    <child>
       <widget class="GtkCheckMenuItem" id="autoConnectItem">
         <property name="visible">True</property>
         <property name="label" translatable="yes">Auto-connect</property>
@@ -631,83 +663,121 @@
       </widget>
     </child>
     <child>
-      <widget class="GtkMenuItem" id="connectItem">
+      <widget class="GtkImageMenuItem" id="joinItem">
+        <property name="label" translatable="yes">_Join</property>
         <property name="visible">True</property>
-        <property name="label" translatable="yes">Connect</property>
         <property name="use_underline">True</property>
-        <signal name="activate" handler="connectItem_activate_cb"/>
+        <property name="use_stock">False</property>
+        <signal name="activate" handler="joinItem_activate_cb"/>
+        <child internal-child="image">
+          <widget class="GtkImage" id="image2">
+            <property name="visible">True</property>
+            <property name="stock">gtk-go-forward</property>
+          </widget>
+        </child>
       </widget>
     </child>
     <child>
-      <widget class="GtkMenuItem" id="disconnectItem">
+      <widget class="GtkImageMenuItem" id="partItem">
+        <property name="label" translatable="yes">_Part</property>
         <property name="visible">True</property>
-        <property name="label" translatable="yes">Disconnect</property>
+        <property name="tooltip" translatable="yes">Leave the pointed channel.</property>
         <property name="use_underline">True</property>
-        <signal name="activate" handler="disconnectItem_activate_cb"/>
+        <property name="use_stock">False</property>
+        <signal name="activate" handler="partItem_activate_cb"/>
+        <child internal-child="image">
+          <widget class="GtkImage" id="image1">
+            <property name="visible">True</property>
+            <property name="stock">gtk-go-back</property>
+          </widget>
+        </child>
       </widget>
     </child>
     <child>
       <widget class="GtkCheckMenuItem" id="autoJoinItem">
         <property name="visible">True</property>
+        <property name="tooltip" translatable="yes">Mark this channel for auto joining.</property>
         <property name="label" translatable="yes">Auto-join</property>
         <property name="use_underline">True</property>
         <signal name="toggled" handler="autoJoinItem_toggled_cb"/>
       </widget>
     </child>
     <child>
-      <widget class="GtkMenuItem" id="setTopicItem">
+      <widget class="GtkImageMenuItem" id="setTopicItem">
+        <property name="label" translatable="yes">Set _Topic</property>
         <property name="visible">True</property>
-        <property name="label" translatable="yes">Topic</property>
+        <property name="tooltip" translatable="yes">Edit the topic of the channel in a seperatee dialog.</property>
         <property name="use_underline">True</property>
+        <property name="use_stock">False</property>
         <signal name="activate" handler="setTopicItem_activate_cb"/>
+        <child internal-child="image">
+          <widget class="GtkImage" id="image8">
+            <property name="visible">True</property>
+            <property name="stock">gtk-edit</property>
+          </widget>
+        </child>
       </widget>
     </child>
     <child>
-      <widget class="GtkMenuItem" id="setKeyItem">
+      <widget class="GtkImageMenuItem" id="setKeyItem">
+        <property name="label" translatable="yes">Set _Key</property>
         <property name="visible">True</property>
-        <property name="label" translatable="yes">Set Key</property>
+        <property name="tooltip" translatable="yes">Set the secret key of the pointed channel.</property>
         <property name="use_underline">True</property>
+        <property name="use_stock">False</property>
         <signal name="activate" handler="setKeyItem_activate_cb"/>
+        <child internal-child="image">
+          <widget class="GtkImage" id="image7">
+            <property name="visible">True</property>
+            <property name="stock">gtk-dialog-authentication</property>
+          </widget>
+        </child>
       </widget>
     </child>
     <child>
-      <widget class="GtkMenuItem" id="joinItem">
-        <property name="visible">True</property>
-        <property name="label" translatable="yes">Join</property>
-        <property name="use_underline">True</property>
-        <signal name="activate" handler="joinItem_activate_cb"/>
-      </widget>
-    </child>
-    <child>
-      <widget class="GtkMenuItem" id="partItem">
-        <property name="visible">True</property>
-        <property name="label" translatable="yes">Part</property>
-        <property name="use_underline">True</property>
-        <signal name="activate" handler="partItem_activate_cb"/>
-      </widget>
-    </child>
-    <child>
-      <widget class="GtkMenuItem" id="hideItem">
-        <property name="visible">True</property>
+      <widget class="GtkImageMenuItem" id="hideItem">
         <property name="label" translatable="yes">H_ide Messages</property>
+        <property name="visible">True</property>
         <property name="use_underline">True</property>
+        <property name="use_stock">False</property>
         <signal name="activate" handler="hideItem_activate_cb"/>
+        <child internal-child="image">
+          <widget class="GtkImage" id="image9">
+            <property name="visible">True</property>
+            <property name="stock">gtk-zoom-out</property>
+          </widget>
+        </child>
       </widget>
     </child>
     <child>
-      <widget class="GtkMenuItem" id="historyItem">
-        <property name="visible">True</property>
+      <widget class="GtkImageMenuItem" id="historyItem">
         <property name="label" translatable="yes">_History</property>
+        <property name="visible">True</property>
+        <property name="tooltip" translatable="yes">Open the history dialog for the pointed tab.</property>
         <property name="use_underline">True</property>
+        <property name="use_stock">False</property>
         <signal name="activate" handler="historyItem_activate_cb"/>
+        <child internal-child="image">
+          <widget class="GtkImage" id="image6">
+            <property name="visible">True</property>
+            <property name="stock">gtk-index</property>
+          </widget>
+        </child>
       </widget>
     </child>
     <child>
-      <widget class="GtkMenuItem" id="closeItem">
-        <property name="visible">True</property>
+      <widget class="GtkImageMenuItem" id="closeItem">
         <property name="label" translatable="yes">Close</property>
-        <property name="use_underline">True</property>
+        <property name="visible">True</property>
+        <property name="tooltip" translatable="yes">Closethe pointed tab.</property>
+        <property name="use_stock">False</property>
         <signal name="activate" handler="closeItem_activate_cb"/>
+        <child internal-child="image">
+          <widget class="GtkImage" id="image5">
+            <property name="visible">True</property>
+            <property name="stock">gtk-close</property>
+          </widget>
+        </child>
       </widget>
     </child>
   </widget>
