--- a/glade/mainwindow.glade
+++ b/glade/mainwindow.glade
@@ -350,6 +350,7 @@
                             <child>
                               <widget class="Custom" id="outputShell">
                                 <property name="visible">True</property>
+                                <property name="can_focus">False</property>
                               </widget>
                               <packing>
                                 <property name="resize">True</property>
@@ -422,6 +423,7 @@
                             <child>
                               <widget class="GtkTreeView" id="serverTree">
                                 <property name="visible">True</property>
+								<property name="can_focus">False</property>
                                 <signal name="button_press_event" handler="serverTree_button_press_event_cb"/>
                                 <signal name="row_activated" handler="serverTree_row_activated_cb"/>
                               </widget>
@@ -459,6 +461,7 @@
                                 <child>
                                   <widget class="GtkTreeView" id="nickList">
                                     <property name="visible">True</property>
+									<property name="can_focus">False</property>
                                     <signal name="button_press_event" handler="nickList_button_press_event_cb"/>
                                     <signal name="row_activated" handler="nickList_row_activated_cb"/>
                                   </widget>
