--- a/glade/dialogs/server.glade
+++ b/glade/dialogs/server.glade
@@ -1,25 +1,28 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
+<?xml version="1.0"?>
 <glade-interface>
+  <!-- interface-requires gtk+ 2.6 -->
+  <!-- interface-naming-policy toplevel-contextual -->
   <widget class="GtkDialog" id="serverDialog">
     <property name="border_width">6</property>
     <property name="title" translatable="yes">Server List</property>
+    <property name="window_position">center-on-parent</property>
     <property name="default_height">400</property>
-    <property name="type_hint">GDK_WINDOW_TYPE_HINT_NORMAL</property>
+    <property name="type_hint">normal</property>
     <property name="has_separator">False</property>
     <child internal-child="vbox">
       <widget class="GtkVBox" id="dialog-vbox1">
         <property name="visible">True</property>
+        <property name="orientation">vertical</property>
         <property name="spacing">12</property>
         <child>
           <widget class="GtkViewport" id="viewport1">
             <property name="visible">True</property>
-            <property name="resize_mode">GTK_RESIZE_QUEUE</property>
-            <property name="shadow_type">GTK_SHADOW_ETCHED_IN</property>
+            <property name="resize_mode">queue</property>
+            <property name="shadow_type">etched-in</property>
             <child>
               <widget class="GtkTreeView" id="serverList">
-                <property name="height_request">0</property>
                 <property name="visible">True</property>
+                <property name="tooltip" translatable="yes">Select one or more servers to act with. Click on the name to rename a server.</property>
                 <signal name="select_cursor_row" handler="serverList_select_cursor_row_cb"/>
                 <signal name="row_activated" handler="serverList_row_activated_cb"/>
               </widget>
@@ -32,43 +35,53 @@
         <child>
           <widget class="GtkHButtonBox" id="hbuttonbox1">
             <property name="visible">True</property>
-            <property name="layout_style">GTK_BUTTONBOX_CENTER</property>
+            <property name="spacing">6</property>
+            <property name="layout_style">center</property>
             <child>
               <widget class="GtkButton" id="deleteButton">
+                <property name="label">gtk-delete</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="label" translatable="yes">gtk-delete</property>
+                <property name="tooltip" translatable="yes">Delete the selected server from maki.</property>
                 <property name="use_stock">True</property>
-                <property name="response_id">0</property>
                 <signal name="clicked" handler="deleteButton_clicked_cb"/>
               </widget>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
+                <property name="position">0</property>
+              </packing>
             </child>
             <child>
               <widget class="GtkButton" id="editButton">
+                <property name="label">gtk-edit</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="label">gtk-edit</property>
+                <property name="tooltip" translatable="yes">Edit the values of a server by opening a new dialog.</property>
                 <property name="use_stock">True</property>
-                <property name="response_id">1</property>
                 <signal name="clicked" handler="editButton_clicked_cb"/>
               </widget>
               <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
                 <property name="position">1</property>
               </packing>
             </child>
             <child>
               <widget class="GtkButton" id="addButton">
+                <property name="label">gtk-add</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="label" translatable="yes">gtk-add</property>
+                <property name="tooltip" translatable="yes">Add a new server to maki.</property>
                 <property name="use_stock">True</property>
-                <property name="response_id">2</property>
                 <signal name="clicked" handler="addButton_clicked_cb"/>
               </widget>
               <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
                 <property name="position">2</property>
               </packing>
             </child>
@@ -81,43 +94,44 @@
         <child internal-child="action_area">
           <widget class="GtkHButtonBox" id="dialog-action_area1">
             <property name="visible">True</property>
-            <property name="layout_style">GTK_BUTTONBOX_END</property>
+            <property name="layout_style">end</property>
             <child>
               <widget class="GtkButton" id="closeButton">
+                <property name="label">gtk-cancel</property>
+                <property name="response_id">-6</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="label">gtk-cancel</property>
                 <property name="use_stock">True</property>
-                <property name="response_id">-6</property>
               </widget>
               <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
+                <property name="position">0</property>
                 <property name="secondary">True</property>
               </packing>
             </child>
             <child>
-              <placeholder/>
-            </child>
-            <child>
-              <placeholder/>
-            </child>
-            <child>
               <widget class="GtkButton" id="connectButton">
+                <property name="label">gtk-connect</property>
+                <property name="response_id">3</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
-                <property name="label" translatable="yes">gtk-connect</property>
+                <property name="tooltip" translatable="yes">Connect to one or more selected servers.</property>
                 <property name="use_stock">True</property>
-                <property name="response_id">3</property>
               </widget>
               <packing>
-                <property name="position">3</property>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
+                <property name="position">1</property>
               </packing>
             </child>
           </widget>
           <packing>
             <property name="expand">False</property>
-            <property name="pack_type">GTK_PACK_END</property>
+            <property name="pack_type">end</property>
+            <property name="position">0</property>
           </packing>
         </child>
       </widget>
